--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "backend": "npm run dev",
+    "backend-install": "npm install",
     "client": "cd frontend && npm start",
     "client-install": "cd frontend && npm install",
     "start": "node backend/app.js",
